...
  func showAlert() {
    DispatchQueue.main.async { [weak self] in
      guard let self else { return }
      let alertModel = AlertModel(
        title: "Пока, пока!",
        message: "Уверены, что хотите выйти?",
        buttonText: "Да",
        completion: { self.presenter?.resetAccount() },
        secondButtonText: "Нет",
        secondCompletion: { self.dismiss(animated: true) }
      )
      self.alertPresenter?.showAlert(for: alertModel)
    }
...
    exitButton = UIButton.systemButton(
      with: profileExitButtonImage,
      target: self,
      action: #selector(self.didTapButton)
    )
    exitButton.tintColor = .ypRed
    exitButton.accessibilityIdentifier = "ExitButton"

    exitButton.translatesAutoresizingMaskIntoConstraints = false
    view.addSubview(exitButton)

    NSLayoutConstraint.activate([
      exitButton.widthAnchor.constraint(equalToConstant: 44),
...
